--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-Skript und Seminararbeiten zum Mathematischen Seminar High Performance Computing
+Skript und Seminararbeiten zum Mathematischen Seminar
+High Performance Computing
+
+Unterverzeichnisse:
+
+skript		Skript und Seminararbeiten
+
+aufgaben	Ziele des Seminars, Aufgabenstellungen
+
+code		Codebeispiele zum Skript und zu den einzelnen Arbeiten
