add source code for samples

--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -25,13 +25,13 @@
 \usepackage{makeidx}
 \usepackage{array}
 \usepackage{hyperref}
-\usepackage{tikz}
-\usetikzlibrary{arrows,decorations.pathmorphing,positioning,fit,petri}
-\usetikzlibrary{calc,intersections,through,backgrounds,graphs}
-\usetikzlibrary{patterns,decorations.pathreplacing}
-\usetikzlibrary{shapes,snakes,trees}
-\usetikzlibrary{decorations.pathreplacing}
-\usetikzlibrary{patterns}
+%\usepackage{tikz}
+%\usetikzlibrary{arrows,decorations.pathmorphing,positioning,fit,petri}
+%\usetikzlibrary{calc,intersections,through,backgrounds,graphs}
+%\usetikzlibrary{patterns,decorations.pathreplacing}
+%\usetikzlibrary{shapes,snakes,trees}
+%\usetikzlibrary{decorations.pathreplacing}
+%\usetikzlibrary{patterns}
 \usepackage{listings}
 \lstdefinestyle{Matlab}{
   numbers=left,
@@ -52,7 +52,7 @@
 \usepackage{subcaption}
 %\usepackage{cite}
 \usepackage{standalone}
-\usepackage[sorting=none,backend=bibtex]{biblatex}
+%\usepackage[sorting=none,backend=bibtex]{biblatex}
 %\addbibresource{sample/bib.bib}
 \AtEndDocument{\clearpage\ifodd\value{page}\else\null\clearpage\fi}
 \makeindex
